--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,35 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
+.mycontainer {
+  position: "absolute";
+  top: 0;
+  left: 0;
+  background-color: #a22a27;
+  height: 160vh;
+  width: 100%;
+}
+
+#tsparticles {
+  height: 100%;
+  width: 100%;
+}
+
+.sideImage {
+  animation: logo-spin infinite 20s linear;
   pointer-events: none;
+  height: 40%;
+}
+.sideImage2 {
+  animation: logo-spin infinite 20s linear;
+  pointer-events: none;
+  height: 40%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
